manifests/pwd-manager/vaultwarden-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-ingressroute
  namespace: vaultwarden
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vault.janikhenz.ch`)
      kind: Rule
      services:
        - name: vaultwarden-service
          port: 80
